[project]
name = "py-neetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = ["test*.py"]
pythonpath = ["."]
addopts = "-ra"
