[project]
name = "py-neetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = ["test*.py"]
pythonpath = ["."]
addopts = "-ra --cov=Leetcode --cov-report=term-missing --cov-report=xml"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ["Leetcode"]

[tool.coverage.report]
show_missing = true
skip_empty = true
